--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         .container {
         position: relative;
         text-align: center;
-        background-color: #00923F;
-        color: #FFF;
+        background-color: #010107;
+        color: #eb0404;
         }
         
         /* Estilos para a imagem */
@@ -30,7 +30,7 @@
 </head>
 <body>
  <div class="container">
-     <img src="img/download.jpeg" alt="Bandeira Do Brasil">
+     <img src="img/c2e20e847942cbf6fd47e1198f2cfe767c4e7545.jpg" alt="Bandeira Do Brasil">
      <div class="text-overlay"></div>
           <h1> Feliz 7 de setembro</h1>
           <p>Sou brasileiro com muito orgulho,com muito amor!</p>
